increased visibility of store buttons, bug fixes

--- a/assets/css/common.css
+++ b/assets/css/common.css
@@ -23,9 +23,8 @@ h1 {
 }
 
 h3 {
-    font-size: 0.8125em; /* 13px */
+    font-size: 0.9em; /* 13px */
     color: #6a4d4d;
-    text-transform: uppercase;
 }
 
 /* --- Banner Area --- */
@@ -164,7 +163,8 @@ h3 {
     padding: 8px 0px;
     margin-bottom: 5px;
 
-    background-color: rgb(170, 170, 170);
+    background-color: rgb(51, 51, 153);
+    color: white;
     border-radius: 8px;
 }
 
